--- a/app/src/main/res/layout/cardviewcalorieintake.xml
+++ b/app/src/main/res/layout/cardviewcalorieintake.xml
@@ -24,7 +24,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins_semibold"
-                android:text="21 January 2022"
+                android:text="5/1/2023"
                 android:layout_marginStart="5dp"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
