--- a/app/src/main/res/layout/cardviewmealslist.xml
+++ b/app/src/main/res/layout/cardviewmealslist.xml
@@ -28,7 +28,7 @@
                 android:layout_marginBottom="10dp"
                 android:fontFamily="@font/poppins_semibold"
                 android:textColor="@color/pastel_red"
-                android:text="11:00 am"
+                android:text="11:00"
                 android:drawablePadding="10dp"
                 android:drawableLeft="@drawable/ic_baseline_access_time_24"
                 android:textAlignment="textStart"
