--- a/app/src/main/res/layout/fragment_admin_post_page.xml
+++ b/app/src/main/res/layout/fragment_admin_post_page.xml
@@ -46,7 +46,7 @@
             android:id="@+id/publishPostButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
+            android:layout_marginEnd="0dp"
             android:backgroundTint="@color/pastel_red"
             android:fontFamily="@font/poppins_semibold"
             android:text="Publish"
