--- a/app/src/main/res/layout/cardviewallrecipes.xml
+++ b/app/src/main/res/layout/cardviewallrecipes.xml
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <ImageButton
+            <ImageView
                 android:id="@+id/recipeImage"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
