--- a/app/src/main/res/layout/cardviewsavedrecipes.xml
+++ b/app/src/main/res/layout/cardviewsavedrecipes.xml
@@ -26,7 +26,7 @@
 
                 android:padding="10dp">
 
-                <ImageButton
+                <ImageView
                     android:id="@+id/imageSavedRecipes"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
@@ -37,7 +37,7 @@
                     android:scaleType="fitXY"
                     android:src="@drawable/french_toast">
 
-                </ImageButton>
+                </ImageView>
 
             </RelativeLayout>
 
