--- a/app/src/main/res/layout/fragment_achievements_page.xml
+++ b/app/src/main/res/layout/fragment_achievements_page.xml
@@ -45,9 +45,9 @@
 
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="0dp"
             android:orientation="vertical">
 
             <ImageView
@@ -96,8 +96,9 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="0dp"
             android:orientation="vertical">
 
             <ImageView
@@ -157,7 +158,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="0dp"
             android:layout_marginEnd="20dp"
             android:orientation="vertical">
 
