--- a/app/src/main/res/layout/fragment_profile_page.xml
+++ b/app/src/main/res/layout/fragment_profile_page.xml
@@ -63,7 +63,7 @@
                     android:layout_height="100dp"
                     android:layout_marginStart="34dp"
                     android:layout_marginTop="23dp"
-                    android:src="@drawable/ic_launcher_background"
+                    android:foreground="@drawable/ic_baseline_person_outline_24"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/profileTitle" />
 
