--- a/app/src/main/res/layout/fragment_login_page.xml
+++ b/app/src/main/res/layout/fragment_login_page.xml
@@ -12,27 +12,26 @@
 
     <TextView
         android:id="@+id/LoginTitle"
-        android:layout_width="247dp"
-        android:layout_height="67dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="265dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginTop="290dp"
         android:fontFamily="@font/poppins_semibold"
         android:gravity="center_horizontal|top"
-        android:text="Bit by Bit"
+        android:text="Baby Bites"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="56sp" />
 
     <TextView
         android:id="@+id/LoginText"
-        android:layout_width="250dp"
-        android:layout_height="22dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="339dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/LoginTitle"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="-20dp"
+        android:layout_marginEnd="30dp"
         android:fontFamily="@font/poppins"
         android:gravity="center_horizontal|top"
         android:text="User Login"
@@ -46,11 +45,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/LoginText"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="35dp"
-        android:layout_marginTop="390dp"
-        android:layout_marginRight="35dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/white_field"
         android:drawableStart="@drawable/ic_baseline_person_outline_24"
         android:drawablePadding="20dp"
@@ -65,10 +62,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/username"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="35dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="35dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/white_field"
         android:drawableStart="@drawable/ic_baseline_password_24"
         android:drawablePadding="20dp"
