--- a/app/src/main/res/layout/fragment_onboarding.xml
+++ b/app/src/main/res/layout/fragment_onboarding.xml
@@ -10,33 +10,30 @@
 
     <TextView
         android:id="@+id/onboardingTitle"
-        android:layout_width="247dp"
-        android:layout_height="67dp"
-        android:layout_alignParentStart="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="72dp"
-        android:layout_marginLeft="35dp"
-        android:layout_marginTop="370dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="360dp"
         android:layout_marginEnd="50dp"
-        android:layout_marginRight="35dp"
-        android:layout_marginBottom="50dp"
         android:fontFamily="@font/poppins_semibold"
-        android:gravity="center_horizontal|top"
-        android:text="Bit by Bit"
+        android:gravity="center"
+        android:text="Baby Bites"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="56sp" />
 
     <TextView
         android:id="@+id/onboardingText"
-        android:layout_width="251dp"
-        android:layout_height="65dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@id/onboardingTitle"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="71dp"
-        android:layout_marginTop="-40dp"
-        android:fontFamily="@font/poppins_semibold"
-        android:gravity="center_horizontal|top"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginTop="-10dp"
+        android:fontFamily="@font/poppins_medium"
         android:text="Your personal companion to a healthier lifestyle"
         android:textAlignment="center"
         android:textSize="18sp" />
