--- a/app/src/main/res/layout/cardviewadminreport.xml
+++ b/app/src/main/res/layout/cardviewadminreport.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardElevation="10dp"
+        android:layout_margin="10dp"
         app:cardCornerRadius="10dp"
          >
 
