--- a/app/src/main/res/layout/fragment_admin_home_page.xml
+++ b/app/src/main/res/layout/fragment_admin_home_page.xml
@@ -57,7 +57,8 @@
             >
 
             <LinearLayout
-                android:layout_width="160dp"
+
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
                 android:orientation="vertical"
@@ -65,6 +66,7 @@
 
 
                 >
+
 
                 <ImageView
                     android:id="@+id/adminPostIV"
@@ -83,7 +85,6 @@
                     android:text="POST"
                     android:textColor="@color/pastel_red"
                     android:textSize="14sp" />
-
             </LinearLayout>
 
             <LinearLayout
