--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -92,7 +92,7 @@
                     android:orientation="vertical">
 
                     <ImageButton
-                        android:id="@+id/pancakeImage"
+                        android:id="@+id/LatestRecipeImage"
                         android:layout_width="match_parent"
                         android:layout_height="160dp"
                         android:layout_gravity="center_horizontal"
@@ -105,7 +105,7 @@
                         android:src="@drawable/french_toast_image" />
 
                     <TextView
-                        android:id="@+id/pancakeTitle"
+                        android:id="@+id/latestRecipeName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/poppins_medium"
