--- a/app/src/main/res/layout/fragment_admin_post_page.xml
+++ b/app/src/main/res/layout/fragment_admin_post_page.xml
@@ -97,6 +97,14 @@
             android:textSize="16dp" />
 
 
+        <ImageView
+            android:id="@+id/pickedImage"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_margin="10dp"
+            android:layout_marginStart="10dp"
+            android:src="@drawable/green_tea_salmon" />
+
         <Button
             android:id="@+id/choosePictureButton"
             android:layout_width="wrap_content"
