--- a/app/src/main/res/layout/cardviewsavedrecipes.xml
+++ b/app/src/main/res/layout/cardviewsavedrecipes.xml
@@ -20,9 +20,22 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
 
             android:orientation="vertical">
+
+            <Button
+                android:id="@+id/ButtonDeleteRecipe"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="330dp"
+                android:layout_marginTop="-0dp"
+                android:background="@color/pastel_red"
+                android:backgroundTint="#FFFFFF"
+                app:icon="@drawable/ic_baseline_pastelred_bookmark_border_24"
+                app:iconTint="@color/white">
+
+
+            </Button>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -33,11 +46,14 @@
                     android:id="@+id/recipeName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="15dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginBottom="10dp"
                     android:layout_marginEnd="10dp"
+                    android:layout_marginTop="-5dp"
                     android:clickable="true"
-                    android:fontFamily="@font/poppins_semibold"
+                    android:fontFamily="@font/poppins_medium"
                     android:linksClickable="true"
+                    android:textStyle="bold"
                     android:maxWidth="280dp"
                     android:text="Low Calorie French Toast"
                     android:textColor="@color/black"
@@ -45,19 +61,6 @@
 
                 </TextView>
 
-                <Button
-                    android:id="@+id/ButtonDeleteRecipe"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="100dp"
-                    android:background="@drawable/transparent_background"
-                    android:backgroundTint="#FFFFFF"
-                    android:drawablePadding="10dp"
-                    android:drawableLeft="@drawable/ic_baseline_pastelred_bookmark_border_24"
-                    android:gravity="center">
-
-
-                </Button>
             </LinearLayout>
 
         </LinearLayout>
