--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -58,7 +58,7 @@
                     android:layout_marginEnd="30dp"
                     android:fontFamily="@font/poppins_semibold"
                     android:gravity="left"
-                    android:text="Latest 🔥 "
+                    android:text="Latest Recipe🔥"
                     android:textColor="@color/black"
                     android:textSize="16sp" />
 
@@ -66,7 +66,7 @@
                     android:id="@+id/buttonAllReceipe"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="125dp"
+                    android:layout_marginStart="70dp"
                     android:backgroundTint="@color/white"
                     android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
                     android:text="See all "
@@ -135,7 +135,7 @@
                     android:layout_marginEnd="30dp"
                     android:fontFamily="@font/poppins_semibold"
                     android:gravity="left"
-                    android:text="Post feeds "
+                    android:text="Latest Posts 🔥"
                     android:textColor="@color/black"
                     android:textSize="16sp" />
 
@@ -143,7 +143,7 @@
                     android:id="@+id/buttonFeed"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="115dp"
+                    android:layout_marginStart="70dp"
                     android:backgroundTint="@color/white"
                     android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
                     android:text="See all "
