--- a/app/src/main/res/layout/cardviewsavedrecipes.xml
+++ b/app/src/main/res/layout/cardviewsavedrecipes.xml
@@ -23,41 +23,40 @@
 
             android:orientation="vertical">
 
-            <Button
-                android:id="@+id/ButtonDeleteRecipe"
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="330dp"
-                android:layout_marginTop="-0dp"
-                android:background="@color/pastel_red"
-                android:backgroundTint="#FFFFFF"
-                app:icon="@drawable/ic_baseline_pastelred_bookmark_border_24"
-                app:iconTint="@color/white">
-
-
-            </Button>
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/ButtonDeleteRecipe"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginEnd="15dp"
+                    android:background="@color/pastel_red"
+                    android:backgroundTint="#FFFFFF"
+                    app:icon="@drawable/ic_baseline_pastelred_bookmark_border_24"
+                    app:iconTint="@color/white">
+
+
+                </Button>
 
                 <TextView
                     android:id="@+id/recipeName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:layout_marginBottom="10dp"
                     android:layout_marginEnd="10dp"
-                    android:layout_marginTop="-5dp"
                     android:clickable="true"
                     android:fontFamily="@font/poppins_medium"
+                    android:gravity="center_vertical"
                     android:linksClickable="true"
-                    android:textStyle="bold"
                     android:maxWidth="280dp"
                     android:text="Low Calorie French Toast"
                     android:textColor="@color/black"
-                    android:textSize="16sp">
+                    android:textSize="16sp"
+                    android:textStyle="bold">
 
                 </TextView>
 
