--- a/app/src/main/res/layout/cardviewadminallrecipes.xml
+++ b/app/src/main/res/layout/cardviewadminallrecipes.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="20dp">
 
@@ -11,7 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         app:cardElevation="10dp"
-        app:cardCornerRadius="5dp">
+        app:cardCornerRadius="5dp"
+        android:id="@+id/cardviewAdminAllRecipe">
 
 
         <Button
