--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -208,6 +208,9 @@
         <action
             android:id="@+id/action_adminHomePage_to_adminPostPage"
             app:destination="@id/adminPostPage" />
+        <action
+            android:id="@+id/action_adminHomePage_to_adminDeleteRecipePage"
+            app:destination="@id/adminDeleteRecipePage" />
     </fragment>
     <fragment
         android:id="@+id/adminUploadRecipePage"
@@ -276,5 +279,14 @@
         <action
             android:id="@+id/action_changePasswordPage_to_loginPage"
             app:destination="@id/loginPage" />
+    </fragment>
+    <fragment
+        android:id="@+id/adminDeleteRecipePage"
+        android:name="com.example.bitbybit.adminDeleteRecipePage"
+        android:label="fragment_admin_delete_recipe_page"
+        tools:layout="@layout/fragment_admin_delete_recipe_page" >
+        <action
+            android:id="@+id/action_adminDeleteRecipePage_to_adminHomePage"
+            app:destination="@id/adminHomePage" />
     </fragment>
 </navigation>
