--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/onboardingPage"
-        android:name="com.example.bitbybit.onboardingPage"
+        android:name="com.example.bitbybit.onBoardingPage"
         android:label="fragment_onboarding"
         tools:layout="@layout/fragment_onboarding" >
         <action
